Fixes ul alignment

--- a/_source/_assets/sass/style.scss
+++ b/_source/_assets/sass/style.scss
@@ -103,6 +103,10 @@ a:active {
   border-bottom: 1px solid darken($red, 10);
 }
 
+ul {
+  text-align: left;
+}
+
 small {
   font-size: 0.75em;
 }
